# xiaomi

./: .clangd  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Day1.mkv  Day2.mkv  MISC.md  Makefile  README.md  bt.txt  build.sh  config.mk  core.crash.4807  import.sh  log2.txt  run.sh  shell.cc
01/: 01.sh  hello.cpp
02/: 02.sh  core.crash.2288  crash.cc
02/lib/sub/: CMakeLists.txt
03/: 03.sh  CMakeLists.txt  Makefile  build.sh
03/src/: math_utils_jni.cc
04/: 04.sh  CMakeLists.txt
05/: 05.sh  CMakeLists.txt
05/lib/: lib.cc
androidplayer/gradle/: libs.versions.toml
androidplayer/gradle/wrapper/: gradle-wrapper.properties
build_ffmpeg_shared/: Dockerfile  build-ffmpeg.sh
common/include/: AAudioRender.h  AudioFrame.hpp  BinarySemaphore.hpp  Entitys.hpp  GLRenderHost.hpp  MediaPipeline.hpp  Mp4Parser.hpp  NativePlayer.hpp  RingBuffer.hpp  SemQueue.hpp  Semaphore.hpp  SyncClock.hpp
common/src/: MediaPipeline.cc  NativePlayer.cc  SyncClock.cc  dummy.cc
daily/Day04/: .clangd  CMakeLists.txt  cnt_char.cc  min_k.cc  min_num.cc  overflow.cpp  overload.cc  ptr.cc  ptr_share.cc  test_unordered_map.cc
daily/Day04/include/: MyStrNoMove.hpp  MyString.hpp  helper.hpp  jj.hpp
daily/Day04/src/: MyStrNoMove.cc  MyString.cc  jj00.cc  jj01.cc  jj02.cc  jj03.cc  jj04.cc  jj05.cc  jj06.cc  jj07.cc  jj08.cc  jj09.c  main.cc
daily/Day05/: .clangd  cond2.cc  condition.cc  fork.c  future.cc  lock_1.cc  mutex_1.cc  thread_v1.cc  thread_v2.cc
daily/Day06/: Socket.cc  endian.cc
daily/Day08/: build.sh
daily/Day08/demo1/: Makefile  add.cc  calc.cc  sub.h
daily/Day08/demo2/: CMakeLists.txt
daily/Day08/demo3/: CMakeLists.txt
daily/Day09/jinWrapper/: CMakeLists.txt  build.sh  native-lib.cpp
daily/Day10/01/: build.sh  install.sh  star.cpp
ffmpegJNI/: .gitignore  build.gradle.kts  build.sh  gradle.properties  settings.gradle.kts  test.sh
ffmpegJNI/include/: Decoder.hpp  DecoderContext.hpp  Demuxer.hpp  MediaSource.hpp  Mp4Parser.hpp  Packet.hpp  PacketQueue.hpp  Semaphore.hpp  YuvFileSaver.hpp  jni_helpers.hpp  mp4_parser.hpp
ffmpegJNI/include/Mp4Parser/: FrameProcessor.hpp
ffmpegJNI/src/: CMakeLists.txt  Decoder.cc  Demuxer.cc  Docoder.cc  Mp4Parser.cc  jni_on_load_unload.cpp  mp4_parser.cpp
ffmpegJNI/src/utils/: AudioFrame.cc  FrameProcessor.cc  MediaSource.cc  Packet.cc  PacketIterator.cc  ParserUtils.cc
ffmpegJNI/test/: CMakeLists.txt  test_decoder.cc  test_demuxer.cc  test_main.cc  test_queue.cc
final/: .clangd  .gitignore  CMakeLists.txt  Day3.mkv  DeadLock.md  README.md
final/audioRender/: CMakeLists.txt
final/build_ffmpeg_shared/: build.sh
final/common/include/: Entitys.hpp  JniCallbackHandler.hpp  MediaPipeline.hpp  SemQueue.hpp  Semaphore.hpp
final/common/src/: JniCallbackHandler.cc  NativePlayer.cc  SyncClock.cc
final/ffmpegJNI/: CMakeLists.txt
final/ffmpegJNI/include/: Decoder.hpp  YuvFileSaver.hpp
final/ffmpegJNI/src/: Decoder.cc  Demuxer.cc
final/ffmpegJNI/test/: CMakeLists.txt  MockPacketSink.h  test_demuxer.cc
final/videoFrameRender/: CMakeLists.txt
final/videoFrameRender/include/: EGLCore.hpp  GLESRender.hpp
final/videoFrameRender/src/: EGLCore.cc  GLESRender.cc  GLRenderHost.cc
helloWorld/: settings.gradle
helloWorld/gradle/: libs.versions.toml
helloWorld/gradle/wrapper/: gradle-wrapper.properties
include/: ClientConnection.hpp  ConcurrentQueue.hpp  Connection.hpp  Poller.hpp  Product.hpp  ScopeThread.hpp  Semp.hpp  Socket.hpp  fileMonitor.hpp  mySwap.h
jniRunner/: settings.gradle.kts
jpegReader/: .gitattributes  .gitignore  CMakeLists.txt  build.sh
jpegReader/include/: CharMapper.hpp  DisplayInterface.hpp  OpenGLDisplay.hpp
jpegReader/src/: CMakeLists.txt  JpegDecoder.cc
jpegReader/src/ascii/: CMakeLists.txt
jpegReader/src/opengl/: CMakeLists.txt
jpegReader/src/sdl/: CMakeLists.txt  SDLDisplay.cc  main_SDL.cc
lab01/: .gitattributes  README.md
lab01/02/: bt.txt
lab01/04/: main.cc
lab01/04/lib/: CMakeLists.txt  lib.cc  lib.hpp
lab01/05/: 05.sh  main.cc
lab01/05/lib/: CMakeLists.txt  lib.hpp
lab02/: README.md
lab02/include/: animalProxy.h  animals.h
lab02/src/: animal.cc  animalProxy.cc
lab03/: .gitattributes  .gitignore  README.md  config.mk
lab03/src/: 02_file.cc  03_swap.cc
lab04/: Makefile  README.md
lab04/include/: myDictionary.h
lab05/: .gitattributes  README.md
lab05/include/: Product.hpp
lab05/src/: Consumer.cc  Producer.cc
lab06/: capture.pcap  capture.sh
lab06-cJSON/: .gitattributes  .gitignore  README.md
lab06-cJSON/include/: Connection.hpp
lab06-cJSON/src/: ClientConnection.cc
lab06/src/: Connection.cc  Poller.cc  Server.cc  Socket.cc
lab07/: .gitattributes  signature.jks
lab07/helloWorld/app/: build.gradle
lab07/jniRunner/app/: build.gradle.kts
lab07/myLib/: settings.gradle.kts
lab08/01/: Makefile
lab08/02/: CMakeLists.txt
lab08/02/include/math/: add.h
lab08/02/lib/add/: CMakeLists.txt
lab08/02/src/: CMakeLists.txt  main.cc
lab09/: .gitattributes  .gitignore  README.md  output.yuv
lab09/ffmpegJNI/: .clangd  CMakeLists.txt  build.sh
lab09/ffmpegJNI/include/: mp4_parser_jni.hpp
lab09/ffmpegJNI/src/: jni_helpers.cpp  mp4_parser_jni.cpp
lab09/ffmpegJNI/test/: CMakeLists.txt
lab10/: README.md
lab10/jpegReader/: .gitignore  CMakeLists.txt
lab10/jpegReader/include/: AsciiArtDisplay.hpp  DisplayInterface.hpp  JpegDecoder.hpp  SDLDisplay.hpp
lab10/jpegReader/src/: CMakeLists.txt
lab10/jpegReader/src/ascii/: AsciiArtDisplay.cc  main_ASCII.cc
lab10/jpegReader/src/opengl/: OpenGLDisplay.cc  main_OpenGL.cc
myLib/mylib/: build.gradle.kts
part1/: settings.gradle
part1/app/: build.gradle
src/: 01_funcPtr.cc  01_swap.cc  02_dict.cc  Client.cc  ClientConnection.cc  Connection.cc  Consumer.cc  Producer.cc  Server.cc  book.cc  fileMonitor.cc  main.cc  myDictionary.cc
traffic/: Makefile
traffic/src/: main.cc
videoFrameRender/: CMakeLists.txt
videoFrameRender/include/: EGLCore.hpp  GLESRender.hpp  log.hpp  render.hpp
videoFrameRender/src/: EGLCore.cc  GLESRender.cc  GLRenderHost.cc
(+77 files in other folders)
